# sqladmin_example

./: .envexample  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py
src/business_logic/dto/: __init__.py  post.py
src/business_logic/services/: posts_get.py
src/infrastructure/admin/: __init__.py
src/infrastructure/admin/models/: post.py
src/infrastructure/db/: client.py  config.py  main.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 40005c804568_initial.py
src/infrastructure/db/models/: post.py
src/presentation/admin/: main.py
src/presentation/api/: asgi.py  config.py
src/presentation/api/controllers/: __init__.py  post.py
src/presentation/api/di/: __init__.py
src/presentation/api/di/providers/: db.py  services.py
