[tool.poetry]
name = "sql-admin"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terekhovy@mail.ru>"]
readme = "README.md"
packages = [{include = "sql_admin"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
