[tool.poetry]
name = "sql-admin"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terekhovy@mail.ru>"]
readme = "README.md"
packages = [{include = "sql_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
sqlalchemy = "^2.0.4"
sqladmin = "^0.9.0"
alembic = "^1.9.4"
asyncpg = "^0.27.0"
orjson = "^3.8.6"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
